style user page

--- a/sources/index.scss
+++ b/sources/index.scss
@@ -1,9 +1,10 @@
 body {
   background: #e9ecef;
   font-family: sans-serif;
+  color: #495057;
 }
 
 section {
-  max-width: 1200px;
+  max-width: 980px;
   margin: 0 auto;
 }
