--- a/sources/search/search.style.scss
+++ b/sources/search/search.style.scss
@@ -1,4 +1,5 @@
 form.search {
+  margin-top: 10vh;
   display: flex;
   width: 100%;
 
@@ -15,6 +16,7 @@ form.search {
     min-width: 100px;
     transition: background .2s ease;
     cursor: pointer;
+    font-size: 1.4em;
 
     &:focus, &:hover {
       background: #ced4da;
