--- a/sources/user/user.style.scss
+++ b/sources/user/user.style.scss
@@ -3,12 +3,16 @@
     display: flex;
     flex-direction: row;
 
-    .list {
+    .repositories {
       flex: 1;
       margin-top: 0;
       margin-left: 10px;
     }
   }
+}
+
+.repositories h2 {
+  font-weight: normal;
 }
 
 aside {
